--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tensorflow/tfjs-node": "^1.7.0",
+    "@tensorflow/tfjs-node": "1.7.0",
     "canvas": "^2.8.0",
     "face-api.js": "^0.22.2",
     "nodemon": "^2.0.12"
