--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "type": "module",
+  
   "name": "facecompare",
   "version": "1.0.0",
   "description": "",
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@tensorflow/tfjs-node": "1.7.0",
-    "canvas": "^2.8.0",
+    "canvas": "2.6.1",
     "face-api.js": "^0.22.2",
     "nodemon": "^2.0.12"
   }
